<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dark Pulse</string>
    <string name="title_activity_start">Dark Pulse</string>
    <string name="title_activity_menu">Dark Pulse</string>
    <string name="btn_start">START</string>
    <string name="btn_lvl1">LEVEL 1</string>
    <string name="btn_lvl2">LEVEL 2</string>
    <string name="btn_lvl3">LEVEL 3</string>
    <string name="btn_lvl4">LEVEL 4</string>
    <string name="btn_lvl5">LEVEL 5</string>
    <string name="info_text">FIND A GIRL IN A DARK ROOM. BUT TAKE CARE, YOU ARE NOT ALONE.</string>
    <string name="info_text22">AND TURN UP THE VOLUME!</string>
    <string name="info_text2">USE STEREO HEADPHONES</string>
    <string name="info_text3">CHOOSE YOUR LEVEL:</string>

</resources>